[package]
name = "ptv-timetable-client"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["reset"] }
reqwest = { version = "0.12.12", features = ["http2", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
sha1 = "0.10.6"
time = { version = "0.3.39", default-features = false, features = ["serde", "parsing", "formatting"] }
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.44.0", features = ["full"] }
